fix bug with divs not being aligned with eachother

--- a/style.css
+++ b/style.css
@@ -76,12 +76,9 @@ button:focus {
         height: fit-content;
         border: 3px solid black;
         width: 45%;
-        top: 12%;
     }
 
     .other-books {
-        position: inherit;
-        height: fit-content;
         border: 3px solid black;
         width: 50%;
     }
